Update kill_vscode_server to only kill for my user

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -96,48 +96,10 @@
     ],
     "cSpell.language": "en,en-US",
     "cSpell.userWords": [
-        // --- Python / tooling ---
-        // tell code prettier to not format this list:
-        "argparse","asyncio","dunder","kwargs","args","fstring","fstrings",
-        "dataclass","dataclasses","typehint","typehints","venv","pyproject",
-        "pipx","virtualenv","uvicorn","gunicorn","setuptools","wheel",
-        "pytest","tox","precommit","pre-commit","mypy","pylint","flake8",
-        "black","isort","ruff","pyright","ipynb","nbconvert","pydantic",
-        "fastapi","starlette","sqlalchemy","alembic","uvloop","numpyro",
-
-        // --- Data / viz libs ---
-        "numpy","pandas","scipy","matplotlib","seaborn","plotly","polars",
-        "scikit","scikit-learn","sklearn",
-
-        // --- ML / DL libs ---
-        "pytorch","torchvision","torchaudio","lightning","timm","wandb",
-        "optuna","xgboost","lightgbm","catboost","huggingface","transformers",
-        "tokenizers","datasets","sentencepiece","faiss","spacy","nltk","gensim",
-        "onnx","onnxruntime","mlflow","ray","kubeflow",
-
-        // --- ML concepts / metrics ---
-        "backprop","backpropagation","autograd","autodiff","checkpointing",
-        "dataloader","dataloaders","datamodule","logit","logits","softmax",
-        "argmax","argmin","onehot","one-hot","crossentropy","cross-entropy",
-        "dropout","batchnorm","batchsize","hyperparam","hyperparams",
-        "hyperparameter","hyperparameters","regularization","regularizer",
-        "overfit","overfitting","underfit","underfitting","generalization",
-        "quantization","quantize","distillation","tokenization","tokenizer",
-        "embeddings","perplexity","beamsearch","topk","top-p","nucleus",
-        "AUC","ROC","F1","RMSE","MAE","MSE","BLEU","ROUGE","WER","CER",
-
-        // --- MLOps / infra ---
-        "dockerize","dockerized","kubernetes","k8s","helm","terraform",
-        "airflow","mlpipeline","mlops","autoscaling","prometheus","grafana",
-        "s3","gcs","bigquery","bigtable",
-
-        // --- File formats / misc ---
-        "jsonl","toml","yaml","ndjson","parquet","arrow","protobuf",
-        "README","CLI","API","utils","middleware","enum","kwargs","stdin",
-        "stderr","stdout",
-
         "activelearners",
         "Adelina",
+        "airflow",
+        "alembic",
         "algo",
         "algos",
         "alsa",
@@ -147,41 +109,65 @@
         "AOM's",
         "aomsdk",
         "aperiodicity",
+        "API",
         "API's",
         "Aptima",
         "Aquantia",
         "arange",
+        "argmax",
+        "argmin",
+        "argparse",
+        "args",
         "ARPU",
+        "arrow",
         "Arslan",
         "artigraph",
         "asgardgb",
         "astrazeneca",
         "astype",
         "asynch",
+        "asyncio",
+        "AUC",
+        "autodiff",
+        "autograd",
         "autopep",
+        "autoscaling",
+        "backprop",
+        "backpropagation",
         "BAIR",
         "bairdev",
         "Barreleye",
         "batchify",
+        "batchnorm",
+        "batchsize",
         "bbox",
         "bboxes",
         "Bcrypt",
+        "beamsearch",
         "betavae",
         "biamby",
+        "bigquery",
+        "bigtable",
         "biontech",
         "Bjoern's",
+        "black",
         "blackbox",
         "BLAS",
         "Blazek",
+        "BLEU",
         "bufsize",
         "bvaeloc",
         "CAGR",
         "CAMELCASE",
+        "catboost",
         "celeba",
+        "CER",
+        "checkpointing",
         "chmod",
         "cifar",
         "circleci",
         "ckpt",
+        "CLI",
         "cmdline",
         "cmds",
         "COCOB",
@@ -201,18 +187,26 @@
         "covid",
         "cpan",
         "cpus",
+        "cross-entropy",
+        "crossentropy",
         "ctdet",
         "cthu",
         "cuda",
         "cudnn",
         "CVPR",
         "Cyprien",
+        "cython",
         "Damiano",
         "DARPA",
         "DARPA’s",
         "DASHIFIED",
         "datacenter",
+        "dataclass",
+        "dataclasses",
         "datalake",
+        "dataloader",
+        "dataloaders",
+        "datamodule",
         "datapoints",
         "datasets",
         "DCMAKE",
@@ -230,35 +224,51 @@
         "dinov",
         "direnv",
         "discriminatorzdim",
+        "distillation",
         "dists",
         "dlib",
         "dload",
         "dockerignore",
+        "dockerize",
+        "dockerized",
         "doctest",
         "doctests",
         "dotenv",
+        "dropout",
         "dsvqa",
         "dtype",
+        "dunder",
         "ebextensions",
         "EBITDA",
         "edgeconnect",
         "efficientdet",
         "elasaticbeanstalk",
+        "embeddings",
+        "enum",
         "envs",
         "errored",
         "eval",
         "evigraph",
         "evigraphs",
+        "F1",
         "facemask",
+        "faiss",
         "Fanalyze",
+        "fastapi",
         "finetune",
         "Fiscus",
+        "flake8",
         "framedets",
         "fsdet",
+        "fstring",
+        "fstrings",
         "fvcore",
         "gbiamby",
         "gcloud",
+        "gcs",
         "gelu",
+        "generalization",
+        "gensim",
         "geoguessr",
         "geospatial",
         "Gerken",
@@ -274,12 +284,20 @@
         "gpus",
         "graceluo",
         "Graciarena",
+        "grafana",
         "gres",
         "groupby",
+        "gunicorn",
         "hackathon",
         "heatmap",
         "heatmaps",
+        "helm",
         "hparams",
+        "huggingface",
+        "hyperparam",
+        "hyperparameter",
+        "hyperparameters",
+        "hyperparams",
         "IESDS",
         "ifeq",
         "iloc",
@@ -309,8 +327,11 @@
         "JOBID",
         "jormungandr",
         "jpegoptim",
+        "jsonl",
         "jsons",
         "Jupyter",
+        "jupyterlab",
+        "k8s",
         "Kaggle",
         "kaiming",
         "kcenter",
@@ -324,9 +345,15 @@
         "KPI's",
         "kube",
         "kubectl",
+        "kubeflow",
+        "kubernetes",
         "Kubernetes",
+        "kwargs",
         "laielli",
         "leaderboard",
+        "libblas",
+        "lightgbm",
+        "lightning",
         "liuhaotian",
         "llarva",
         "llava",
@@ -335,7 +362,9 @@
         "LOCALID",
         "loeffler",
         "logit",
+        "logits",
         "lvis",
+        "MAE",
         "manip",
         "maskrcnn",
         "matplotlib",
@@ -344,12 +373,16 @@
         "medifor",
         "mers",
         "microservice",
+        "middleware",
         "Mingyang",
         "miniconda",
         "minikube",
         "minival",
         "MIZZOU",
         "mkdir",
+        "mlflow",
+        "mlops",
+        "mlpipeline",
         "mmbt",
         "mmcv",
         "mmdet",
@@ -360,14 +393,18 @@
         "moco",
         "moderna",
         "mrdet",
+        "MSE",
         "Murt",
         "mypy",
+        "nadirdet",
         "nargs",
         "nbconvert",
         "nbextension",
+        "nbformat",
         "nccl",
         "NCPUS",
         "ndarray",
+        "ndjson",
         "nepochs",
         "neuropaths",
         "NGPUS",
@@ -380,35 +417,54 @@
         "nproc",
         "nprocs",
         "ntasks",
+        "nucleus",
+        "numba",
         "NUMEXPR",
         "numpy",
+        "numpyro",
         "nunique",
         "nvcc",
         "nvcr",
+        "one-hot",
+        "onehot",
         "onnx",
+        "onnxruntime",
         "openai",
+        "openblas",
         "opencv",
         "operationalized",
         "operationalizing",
         "optim",
         "optipng",
+        "optuna",
         "orgs",
         "ossh",
+        "overfit",
+        "overfitting",
         "owncloud",
+        "pandas",
         "panopticapi",
         "Parallelization",
+        "parquet",
         "patchified",
         "patchify",
         "pdf's",
+        "perplexity",
         "pigz",
+        "pipx",
+        "plotly",
+        "polars",
         "popd",
         "Popen",
         "Posix",
+        "pre-commit",
+        "precommit",
         "preds",
         "pretrained",
         "printf",
         "probs",
         "PROCS",
+        "prometheus",
         "protobuf",
         "psutil",
         "Psychographics",
@@ -420,6 +476,7 @@
         "pycodestyle",
         "PYCOM",
         "pycomic",
+        "pydantic",
         "pydocstyle",
         "pydoctest",
         "pyenv",
@@ -428,6 +485,9 @@
         "pylint",
         "pylintrc",
         "pypi",
+        "pyproject",
+        "pyright",
+        "pysimdjson",
         "pytest",
         "pythonhosted",
         "Pythonic",
@@ -435,19 +495,26 @@
         "PYTHONUNBUFFERED",
         "pytorch",
         "pyupgrade",
+        "pyyaml",
         "qformer",
+        "quantization",
+        "quantize",
         "querry",
         "randn",
         "rarfile",
+        "ray",
         "rcfile",
         "rcnn",
         "rdzv",
+        "README",
         "realpath",
         "Realtek",
         "recents",
         "recontenxtualization",
         "recontextualization",
         "recontextualized",
+        "regularization",
+        "regularizer",
         "reindex",
         "relu",
         "repurposing",
@@ -455,28 +522,38 @@
         "RESNETS",
         "RETVQA",
         "Ritwik",
+        "RMSE",
         "rmtree",
+        "ROC",
         "Rohrbach",
         "roibatch",
+        "ROUGE",
         "rpartition",
         "rptx",
         "rtype",
+        "ruff",
+        "Ryzen",
         "s",
+        "s3",
         "sacctmgr",
         "sahi",
         "savez",
         "SBATCH",
+        "scikit",
+        "scikit-learn",
         "scipy",
         "scontrol",
         "scrollback",
         "sdist",
         "sdpa",
+        "seaborn",
         "segm",
         "segmentations",
         "segmentator",
         "SEGSIZE",
         "semafor",
         "semaforprogram",
+        "sentencepiece",
         "serializable",
         "setaf",
         "setfacl",
@@ -484,13 +561,20 @@
         "Shilliday",
         "shutil",
         "simdjson",
+        "sklearn",
         "slidevqa",
         "Slurm",
         "Snopes",
         "sntp",
+        "softmax",
+        "spacy",
         "sqlalchemy",
         "squeue",
         "srun",
+        "starlette",
+        "stderr",
+        "stdin",
+        "stdout",
         "submitit",
         "submodule",
         "subscore",
@@ -502,6 +586,7 @@
         "TDINO",
         "tenumerate",
         "termcolor",
+        "terraform",
         "textvqa",
         "Tilix",
         "timeit",
@@ -509,17 +594,27 @@
         "tini",
         "tobytes",
         "todo's",
+        "tokenization",
+        "tokenizer",
+        "tokenizers",
         "tolist",
+        "toml",
+        "top-p",
         "topk",
+        "torchaudio",
         "torchvision",
+        "tox",
         "tqdm",
         "trainvae",
         "trainval",
         "trainvalno",
+        "transformers",
         "triu",
         "Tuya",
         "twosix",
         "TYPECHECK",
+        "typehint",
+        "typehints",
         "typer",
         "tzip",
         "uart",
@@ -527,6 +622,8 @@
         "ultralytics",
         "unbuffered",
         "unchipped",
+        "underfit",
+        "underfitting",
         "UNFOIL",
         "uniquify",
         "unpatchify",
@@ -535,6 +632,9 @@
         "unsqueeze",
         "UPCXX",
         "uritools",
+        "utils",
+        "uvicorn",
+        "uvloop",
         "vaallocb",
         "VAALPP",
         "VAALPPNOVAE",
@@ -546,6 +646,7 @@
         "vectorvlm",
         "venv",
         "vggoriginal",
+        "virtualenv",
         "visdrone",
         "visualnews",
         "vitb",
@@ -561,9 +662,12 @@
         "webdavs",
         "webqa",
         "wemake",
+        "WER",
+        "wheel",
         "WLOG",
         "WORKDIR",
         "xclip",
+        "xgboost",
         "xmax",
         "xmin",
         "xrange",
@@ -571,6 +675,7 @@
         "XVIEWCOCO",
         "xyxy",
         "yacs",
+        "yaml",
         "yaml's",
         "Yaser",
         "Yasir",
@@ -584,7 +689,8 @@
         "zfill",
         "zmodload",
         "zotero",
-        "zprof"
+        "zprof",
+        "zstd"
     ],
     "diffEditor.diffAlgorithm": "advanced",
     "editor.bracketPairColorization.enabled": true,
@@ -828,7 +934,8 @@
         "sif": "linux",
         "d6": "linux",
         "ub24gpu": "linux",
-        "ydrag.asgardgb.com": "linux"
+        "ydrag.asgardgb.com": "linux",
+        "dgx1": "linux"
     },
     "remote.SSH.showLoginTerminal": true,
     "rewrap.wrappingColumn": 120,
@@ -1107,5 +1214,10 @@
         "editor.defaultFormatter": "mrtz-cdstb00.reqformatter"
     },
     "flake8.enabled": false,
+    "[toml]": {
+        "editor.defaultFormatter": "tamasfe.even-better-toml"
+    },
+    "docker.extension.enableComposeLanguageServer": false,
+    "workbench.editorLargeFileConfirmation": 100,
     // "git.path": "/home/gbiamby/bin/git-vscode-wrapper",
 }
