--- a/stow_packages/tmux/.tmux.conf
+++ b/stow_packages/tmux/.tmux.conf
@@ -1,11 +1,24 @@
+# TPM plugin manager (load plugins here so later settings override tmux-sensible defaults)
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+# tmux-resurrect: restore tmux environment after system restart.
+# prefix + Ctrl-s - save
+# prefix + Ctrl-r - restore
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum' # Automatic restoring and continuous saving of tmux env
+set -g @plugin 'tmux-plugins/tmux-yank' # clipboard integration
+
+# Initialize TPM (leave this at the bottom of the TPM block)
+run '~/.tmux/plugins/tpm/tpm'
+
 # change the prefix from 'C-b' to 'C-a'
 # (remap capslock to CTRL for easy access)
 # unbind C-b
 # set -g prefix C-a
 # bind C-a send-prefix
 
-# Set shell to zsh
-set-option -g default-shell $SHELL
+# Set shell to zsh (uses whatever $SHELL is set to; override explicitly if needed)
+set-option -g default-shell ${SHELL}
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -29,8 +42,21 @@ bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 unbind p
 bind p previous-window
 
-# shorten command delay
+# Address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -sg escape-time 1
+
+# Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
+set -g status-interval 5
+
+# (OS X) Fix pbcopy/pbpaste for old tmux versions (pre 2.6)
+# Safe to leave commented on Linux; uncomment only if you actually use this workflow
+# set -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# GPT: Should I switch to emacs key bindings? What will that change for me when using tmux? I mostly
+# just use Ctrl+b + D or X. I don't know if I use any other keybindings.
+# Emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+# set -g status-keys emacs
 
 # don't rename windows automatically
 set -g allow-rename off
@@ -47,13 +73,12 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# enable vi mode keys
+# enable vi mode keys for copy-mode and command-prompt
 set-window-option -g mode-keys vi
 
-# set default terminal mode to 256 colors
-# set -g default-terminal "screen-256color"
-set -g default-terminal "${TERM}"
-set -g terminal-overrides ",xterm:Tc"
+# set default terminal mode to 256 colors and truecolor
+set -g default-terminal "tmux-256color"
+set -asg terminal-features ",tmux-256color:RGB"
 
 
 # present a menu of URLs to open from the visible pane. sweet.
@@ -61,16 +86,57 @@ bind u capture-pane \;\
     save-buffer /tmp/tmux-buffer \;\
     split-window -l 10 "urlview /tmp/tmux-buffer"
 
+# Keeps windows consistent when your terminal size changes:
+setw -g aggressive-resize on
+
+# Enable focus events so that applications inside tmux can know when they gain/lose focus. Helps
+# some apps (vim, etc.) detect focus changes:
+set -g focus-events on
+
+# If your terminal supports dynamic titles:
+set -g set-titles on
+set -g set-titles-string "#S:#I.#P #W"
+
+# Vi-style copy-mode bindings:
+# - In copy-mode, press 'v' to start a character-wise selection, move with hjkl/arrows.
+# - Press 'V' to select the whole current line.
+# - Press 'y' to copy the selection and exit copy-mode.
+# Usage example:
+#   1. Enter copy-mode: prefix + [
+#   2. Move cursor to start of text.
+#   3. Press 'v' (begin-selection) and move to end of text.
+#   4. Press 'y' to copy-selection-and-cancel (leaves copy-mode, text in tmux buffer).
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi V send -X select-line
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
+
+# If you want 'y' to also copy to the system clipboard on X11, you could instead use:
+# bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+# (That would "override" the plain copy-selection-and-cancel behavior.)
+
+# Show an interactive tree of sessions, windows, and panes:
+# - Press prefix + t.
+# - Navigate with arrow keys or hjkl.
+# - Press Enter to switch to the selected session/window/pane.
+# - Press 'x' to kill the selected item, 'q' to quit the tree.
+bind t choose-tree
+
+# Prompt for a session name and create a new session with that name:
+# - Press prefix + S.
+# - A prompt "Session name:" appears in the status line.
+# - Type a name (e.g., "work", "notes") and press Enter.
+# - tmux creates and switches to a new session: new-session -s '<that-name>'.
+bind S command-prompt -p "Session name:" "new-session -s '%%'"
 
 ######################
 ### DESIGN CHANGES ###
 ######################
 
 # loud or quiet?
-set -g visual-activity off
-set -g visual-bell off
+set -g visual-activity on
+set -g visual-bell on
 set -g visual-silence off
-setw -g monitor-activity off
+setw -g monitor-activity on
 set -g bell-action none
 
 #  modes
@@ -85,7 +151,7 @@ set -g pane-active-border-style 'bg=colour0 fg=colour5'
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour18 fg=colour4'
-set -g status-left '#[fg=green]host:#H, sess:#S#[default] %m/%d/%y win:#I pane:#P '
+set -g status-left '#[fg=green]#H#[default] #[fg=cyan]#S#[default] #[fg=yellow]#I:#P#[default] %m/%d %H:%M '
 set -g status-right '#[fg=colour18,bg=colour4] %d/%m #[fg=colour4,bg=colour18] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 55
