Add unsetopt pathdirs to zsh_options, add `zstyle ':completion:*:ssh:*' hosts off`

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -558,6 +558,7 @@
         "setaf",
         "setfacl",
         "setuptools",
+        "setw",
         "Shilliday",
         "shutil",
         "simdjson",
