--- a/stow_packages/tmux/.tmux.conf
+++ b/stow_packages/tmux/.tmux.conf
@@ -8,8 +8,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum' # Automatic restoring and continuous saving of tmux env
 set -g @plugin 'tmux-plugins/tmux-yank' # clipboard integration
 
-# Initialize TPM (leave this at the bottom of the TPM block)
-run '~/.tmux/plugins/tpm/tpm'
 
 # change the prefix from 'C-b' to 'C-a'
 # (remap capslock to CTRL for easy access)
@@ -166,3 +164,6 @@ setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages
 set -g message-style 'fg=colour18 bg=colour4 bold'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
