update `.tmux.conf`: Enable passthrough for escape sequences in tmux to fix display issues when using tmux in VS Code terminal

--- a/stow_packages/tmux/.tmux.conf
+++ b/stow_packages/tmux/.tmux.conf
@@ -1,13 +1,22 @@
 # TPM plugin manager (load plugins here so later settings override tmux-sensible defaults)
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm' # Install plugins: prefix + I (capital i), Update: prefix + U
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # tmux-resurrect: restore tmux environment after system restart.
 # prefix + Ctrl-s - save
 # prefix + Ctrl-r - restore
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum' # Automatic restoring and continuous saving of tmux env
+set -g @plugin 'tmux-plugins/tmux-resurrect' # Manual save/restore (Prefix + Ctrl-s/Ctrl-r)
+set -g @plugin 'tmux-plugins/tmux-continuum' # Automatic restoring and continuous saving of tmux env every 15min
 set -g @plugin 'tmux-plugins/tmux-yank' # clipboard integration
 
+# --- Resurrect / Continuum Config ---
+# Auto-restore on startup
+set -g @continuum-restore 'on'
+# Save the contents of the panes (history/scrollback)
+set -g @resurrect-capture-pane-contents 'on'
+# Restore vim sessions (if Session.vim exists)
+#   Note: This requires you to allow Vim to save sessions (e.g., by using the tpope/vim-obsession
+#   plugin in Vim or manually saving Session.vim), but this line tells Tmux to look for those sessions.
+set -g @resurrect-strategy-vim 'session'
 
 # change the prefix from 'C-b' to 'C-a'
 # (remap capslock to CTRL for easy access)
@@ -78,6 +87,8 @@ set-window-option -g mode-keys vi
 set -g default-terminal "tmux-256color"
 set -asg terminal-features ",tmux-256color:RGB"
 
+# Allow escape sequences (fixes the weird ]10;rgb characters when using tmux in VS Code terminal)
+set -g allow-passthrough on
 
 # present a menu of URLs to open from the visible pane. sweet.
 bind u capture-pane \;\
