Make some settings conditional upon whether or not we are in an SSH session.

--- a/stow_packages/tmux/.tmux.conf
+++ b/stow_packages/tmux/.tmux.conf
@@ -18,6 +18,10 @@ set -g @resurrect-capture-pane-contents 'on'
 #   plugin in Vim or manually saving Session.vim), but this line tells Tmux to look for those sessions.
 set -g @resurrect-strategy-vim 'session'
 
+# Make tmux update its environment variables from the surrounding shell
+# (so that when you launch tmux from a terminal, it inherits the latest SSH_AUTH
+set -g update-environment "SSH_AUTH_SOCKET SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+
 # change the prefix from 'C-b' to 'C-a'
 # (remap capslock to CTRL for easy access)
 # unbind C-b
