Clean up vscode settings.json add shebang to bashrc

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -81,50 +81,50 @@
         "vsls": true,
         "overleaf-workshop": true
     },
-    "cSpell.enableFiletypes": [
-        "!cpp",
-        "!csharp",
-        "!go",
-        "!handlebars",
-        "!haskell",
-        "!jade",
-        "!less",
-        "!php",
-        "!pug",
-        "!rust",
-        "!scala",
-        "csv",
-        "csv (colon)",
-        "csv (dot)",
-        "csv (double quote)",
-        "csv (hyphen)",
-        "csv (whitespace)",
-        "cython",
-        "django-html",
-        "django-txt",
-        "dockercompose",
-        "dockerfile",
-        "dotenv",
-        "editorconfig",
-        "git-rebase",
-        "gitignore",
-        "hosts",
-        "jinja",
-        "jsx-tags",
-        "jupyter",
-        "log",
-        "makefile",
-        "mako",
-        "matlab",
-        "objective-cpp",
-        "perl",
-        "properties",
-        "r",
-        "search-result",
-        "shellscript",
-        "sql",
-        "ssh_config"
-    ],
+    "cSpell.enabledFileTypes": {
+        "cpp": false,
+        "csharp": false,
+        "go": false,
+        "handlebars": false,
+        "haskell": false,
+        "jade": false,
+        "less": false,
+        "php": false,
+        "pug": false,
+        "rust": false,
+        "scala": false,
+        "csv": true,
+        "csv (colon)": true,
+        "csv (dot)": true,
+        "csv (double quote)": true,
+        "csv (hyphen)": true,
+        "csv (whitespace)": true,
+        "cython": true,
+        "django-html": true,
+        "django-txt": true,
+        "dockercompose": true,
+        "dockerfile": true,
+        "dotenv": true,
+        "editorconfig": true,
+        "git-rebase": true,
+        "gitignore": true,
+        "hosts": true,
+        "jinja": true,
+        "jsx-tags": true,
+        "jupyter": true,
+        "log": true,
+        "makefile": true,
+        "mako": true,
+        "matlab": true,
+        "objective-cpp": true,
+        "perl": true,
+        "properties": true,
+        "r": true,
+        "search-result": true,
+        "shellscript": true,
+        "sql": true,
+        "ssh_config": true,
+    },
     "cSpell.language": "en,en-US",
     "cSpell.userWords": [
         "activelearners",
@@ -296,9 +296,11 @@
         "fstring",
         "fstrings",
         "fvcore",
+        "gbadmin",
         "gbiamby",
         "gcloud",
         "gcs",
+        "gedit",
         "gelu",
         "generalization",
         "gensim",
@@ -320,6 +322,7 @@
         "grafana",
         "gres",
         "groupby",
+        "GSSAPI",
         "gunicorn",
         "hackathon",
         "heatmap",
@@ -441,6 +444,7 @@
         "ndarray",
         "ndjson",
         "nepochs",
+        "nersc",
         "neuropaths",
         "NGPUS",
         "nhead",
@@ -719,17 +723,20 @@
         "yaml's",
         "Yaser",
         "Yasir",
+        "ydrag",
         "ymax",
         "ymin",
         "yolo",
         "yolov",
         "yubico",
         "yubikey",
+        "zcompdump",
         "ZDIM",
         "zfill",
         "zmodload",
         "zotero",
         "zprof",
+        "zstat",
         "zstd"
     ],
     "diffEditor.diffAlgorithm": "advanced",
@@ -872,7 +879,6 @@
     "git.terminalGitEditor": true,
     "git.untrackedChanges": "separate",
     "github.copilot.advanced": {},
-    "isort.showNotifications": "onWarning",
     "javascript.inlayHints.functionLikeReturnTypes.enabled": true,
     "jupyter.allowUnauthorizedRemoteConnection": true,
     "jupyter.askForKernelRestart": false,
@@ -882,10 +888,8 @@
     ],
     "latex-workshop.intellisense.package.enabled": true,
     "latex-workshop.view.pdf.viewer": "tab",
-    "markdown.marp.pptx.editable": "smart",
     "markdown.preview.breaks": true,
     "markdown.preview.typographer": true,
-    "materialTheme.accent": "Blue",
     "notebook.cellToolbarLocation": {
         "default": "right",
         "jupyter-notebook": "left"
@@ -985,7 +989,6 @@
     "python.analysis.generateWithTypeAnnotation": true,
     "python.analysis.indexing": true,
     "python.analysis.typeCheckingMode": "basic",
-    "python.diagnostics.sourceMapsEnabled": true,
     "python.envFile": "${workspaceFolder}/.env",
     "python.experiments.enabled": false,
     "python.languageServer": "Pylance",
@@ -994,13 +997,13 @@
     // "remote.SSH.path": "/usr/local/ossh/bin/ssh",
     "remote.SSH.connectTimeout": 120,
     "remote.SSH.defaultExtensions": [
-        "aaron-bond.better-comments",
         "betwo.vscode-linux-binary-preview",
         "charliermarsh.ruff",
         "christian-kohler.path-intellisense",
         "codezombiech.gitignore",
         "danielnichols.slurm-dashboard",
         "davidanson.vscode-markdownlint",
+        "dnut.rewrap-revived",
         "donjayamanne.githistory",
         "dunstontc.vscode-docker-syntax",
         "dunstontc.vscode-gitignore-syntax",
@@ -1008,8 +1011,9 @@
         "editorconfig.editorconfig",
         "esbenp.prettier-vscode",
         "euskadi31.json-pretty-printer",
-        "lumirelle.shell-format-rev",
         "george-alisson.html-preview-vscode",
+        "github.copilot",
+        "github.copilot-chat",
         "gruntfuggly.todo-tree",
         "guyskk.language-cython",
         "james-yu.latex-workshop",
@@ -1018,6 +1022,7 @@
         "juupje.slurmassist",
         "kriegalex.vscode-cudacpp",
         "lamborghinious.auto-scroll",
+        "lumirelle.shell-format-rev",
         "mathematic.vscode-latex",
         "mechatroner.rainbow-csv",
         "mervin.markdown-formatter",
@@ -1035,18 +1040,18 @@
         "ms-python.pylint",
         "ms-python.python",
         "ms-python.vscode-pylance",
-        "ms-toolsai.jupyter",
         "ms-toolsai.jupyter-keymap",
         "ms-toolsai.jupyter-renderers",
+        "ms-toolsai.jupyter",
         "ms-toolsai.vscode-jupyter-cell-tags",
         "ms-toolsai.vscode-jupyter-slideshow",
         "ms-vscode-remote.remote-containers",
-        "ms-vscode-remote.remote-ssh",
         "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode-remote.remote-ssh",
         "ms-vscode-remote.remote-wsl",
         "ms-vscode-remote.vscode-remote-extensionpack",
-        "ms-vscode.cpptools",
         "ms-vscode.cpptools-themes",
+        "ms-vscode.cpptools",
         "ms-vscode.remote-explorer",
         "ms-vscode.remote-server",
         "ms-vscode.wordcount",
@@ -1069,7 +1074,6 @@
         "shd101wyy.markdown-preview-enhanced",
         "sissel.shopify-liquid",
         "spikespaz.vscode-smoothtype",
-        "dnut.rewrap-revived",
         "streetsidesoftware.code-spell-checker",
         "takumii.markdowntable",
         "tamasfe.even-better-toml",
@@ -1081,7 +1085,8 @@
         "voidei.vscode-vimrc",
         "xshrim.txt-syntax",
         "zaaack.markdown-editor",
-        "ziyasal.vscode-open-in-github"
+        "ziyasal.vscode-open-in-github",
+        "aaron-bond.better-comments",
     ],
     "remote.SSH.defaultForwardedPorts": [],
     "remote.SSH.enableAgentForwarding": true,
@@ -1110,10 +1115,6 @@
     "remote.SSH.useLocalServer": false,
     "rewrap.wrappingColumn": 120,
     "ruff.organizeImports": false,
-    "scm.showChangesSummary": false,
-    "scm.showHistoryGraph": false,
-    "scm.showIncomingChanges": "never",
-    "scm.showOutgoingChanges": "never",
     // --- Search: Exclude artifacts and data from search results ---
     "search.exclude": {
         // All entries from files.watcherExclude are automatically excluded from search.
@@ -1141,7 +1142,6 @@
     "shellformat.flag": "-ci -bn -kp",
     "slurm-dashboard.job-dashboard.refreshInterval": 30,
     "slurm-dashboard.job-dashboard.showJobInfo": true,
-    "svg.preview.mode": "img",
     "telemetry.telemetryLevel": "error",
     "terminal.integrated.automationProfile.linux": {
         "args": [
