Add comments to keepassxc.sh

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -373,6 +373,8 @@
         "kaiming",
         "kcenter",
         "kcentergreedy",
+        "keepassx",
+        "keepassxc",
         "kfold",
         "killpg",
         "Kirill",
@@ -717,6 +719,7 @@
         "xticks",
         "Xview",
         "XVIEWCOCO",
+        "xwayland",
         "xyxy",
         "yacs",
         "yaml",
