- add ripgrep to install.sh - add comments to top of each dotfile so the sourcing order is clear - make omz install --unattended - comment out scripts/programs/pgadmin.sh - Add `~/.zsh-complete` to fpath

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -136,6 +136,7 @@
         "alsa",
         "altron",
         "Amruta",
+        "Anki",
         "anns",
         "AOM's",
         "aomsdk",
@@ -291,6 +292,7 @@
         "finetune",
         "Fiscus",
         "flake8",
+        "fpath",
         "framedets",
         "fsdet",
         "fstring",
@@ -690,6 +692,7 @@
         "vectorizing",
         "vectorvlm",
         "venv",
+        "vfio",
         "vggoriginal",
         "virtualenv",
         "visdrone",
