tmux.conf fix so it works on ubuntu 22, which has an older version of tmux that doesn't support `allow-passthrough` option

--- a/stow_packages/tmux/.tmux.conf
+++ b/stow_packages/tmux/.tmux.conf
@@ -92,7 +92,8 @@ set -g default-terminal "tmux-256color"
 set -asg terminal-features ",tmux-256color:RGB"
 
 # Allow escape sequences (fixes the weird ]10;rgb characters when using tmux in VS Code terminal)
-set -g allow-passthrough on
+set -gq allow-passthrough on
+set -s escape-time 50
 
 # present a menu of URLs to open from the visible pane. sweet.
 bind u capture-pane \;\
